[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BCPython"
version = "0.0.2"
authors = [
  { name="Emil" },
  { name="Anton" },
  { name="Alex" },
]
dependencies = [
    "py4j>=0.10.9",
]

description = "Bouncy Castle python wrapper"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/2APetrin/bc-python-port"

[tool.setuptools]
# packages = {find = {where = ["src"]}}
include-package-data = true

[tool.setuptools.package-data]
BCPython = [
    "jar/*.jar",
    "jar/**/*.jar",
]

[tool.setuptools.package-dir]
BCPython = "src/BCPython"

